feat: change link to github pages

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <div class="twitch-wrapper d-flex flex-column">
       <div class="twitch-player-wrapper">
         <iframe class="iframe"
-          src="https://player.twitch.tv/?channel=dreadztv&parent=joyful-paprenjak-b09f92.netlify.app" frameborder="0"
+          src="https://player.twitch.tv/?channel=melharucos&parent=https://vinnarde.github.io/formula-test/" frameborder="0"
           allowfullscreen></iframe>
       </div>
       <div class="twitch-chat-wrapper">
         <iframe class="iframe"
-          src="https://www.twitch.tv/embed/melharucos/chat?parent=joyful-paprenjak-b09f92.netlify.app">
+          src="https://www.twitch.tv/embed/melharucos/chat?parent=https://vinnarde.github.io/formula-test/">
         </iframe>
       </div>
     </div>
