--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
   <title>Formula</title>
 </head>
 
 <body class="bg-dark">
-  <div class="container-fluid d-flex justify-content-space">
+  <div class="container-fluid d-flex justify-content-space vh-100 overflow-hidden px-0">
     <div class="player-wrapper">
       <iframe class="iframe" src="https://vk.com/video_ext.php?oid=-172963629&id=456239762&hash=1f7fd4d538833c0b"
         frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media; fullscreen; picture-in-picture"></iframe>
     </div>
     <div class="twitch-wrapper d-flex flex-column">
-      <div class="twitch-player-wrapper">
-        <iframe class="iframe"
-          src="https://player.twitch.tv/?channel=melharucos&parent=https://vinnarde.github.io/formula-test/" frameborder="0"
-          allowfullscreen></iframe>
+      <div class="twitch-player-wrapper flex-fill">
+        <iframe class="iframe" src="https://player.twitch.tv/?channel=melharucos&parent=vinnarde.github.io" frameborder="0"
+          allowfullscreen="true" scrolling="no" height="100%" width="100%"></iframe>
       </div>
-      <div class="twitch-chat-wrapper">
-        <iframe class="iframe"
-          src="https://www.twitch.tv/embed/melharucos/chat?parent=https://vinnarde.github.io/formula-test/">
+      <div class="twitch-chat-wrapper flex-fill">
+        <iframe class="iframe" id="twitch-chat-embed" src="https://www.twitch.tv/embed/twitchdev/chat?parent=vinnarde.github.io"
+          height="100%" width="100%">
         </iframe>
       </div>
     </div>
