feat: change chat link to melharucos

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           allowfullscreen="true" scrolling="no" height="100%" width="100%"></iframe>
       </div>
       <div class="twitch-chat-wrapper flex-fill">
-        <iframe class="iframe" id="twitch-chat-embed" src="https://www.twitch.tv/embed/twitchdev/chat?parent=vinnarde.github.io"
+        <iframe class="iframe" id="twitch-chat-embed" src="https://www.twitch.tv/embed/melharucos/chat?parent=vinnarde.github.io"
           height="100%" width="100%">
         </iframe>
       </div>
