--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formula</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
-  <title>Formula</title>
 </head>
 
 <body class="bg-dark">
@@ -24,7 +24,7 @@
           allowfullscreen="true" scrolling="no" height="100%" width="100%"></iframe>
       </div>
       <div class="twitch-chat-wrapper flex-fill">
-        <iframe class="iframe" id="twitch-chat-embed" src="https://www.twitch.tv/embed/melharucos/chat?parent=vinnarde.github.io"
+        <iframe class="iframe" id="twitch-chat-embed" src="https://www.twitch.tv/embed/melharucos/chat?darkpopout&parent=vinnarde.github.io"
           height="100%" width="100%">
         </iframe>
       </div>
