feat: add top and bottom padding and min-width for twitch block

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <iframe class="iframe" src="https://vk.com/video_ext.php?oid=-172963629&id=456239762&hash=1f7fd4d538833c0b"
         frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media; fullscreen; picture-in-picture"></iframe>
     </div>
-    <div class="twitch-wrapper d-flex flex-column">
+    <div class="twitch-wrapper d-flex flex-column pt-1 pb-1">
       <div class="twitch-player-wrapper flex-fill">
         <iframe class="iframe" src="https://player.twitch.tv/?channel=melharucos&parent=vinnarde.github.io" frameborder="0"
           allowfullscreen="true" scrolling="no" height="100%" width="100%"></iframe>
