--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
   <main>
     <div class="container-fluid main-container d-flex justify-content-space overflow-hidden px-0">
       <div class="player-wrapper" id="split-player-formula">
-        <iframe class="iframe" src="https://vk.com/video_ext.php?oid=-211941733&id=456239158&hash=40159766b0115fd1"
+        <iframe class="iframe" src="https://vk.com/video_ext.php?oid=-211941733&id=456239163&hash=ff964debead865e5"
           frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media; fullscreen; picture-in-picture">
         </iframe>
       </div>
       <div class="twitch-wrapper d-flex flex-column" id="split-twitch">
         <div class="twitch-player-wrapper flex-fill" id="split-twitch-player">
-          <iframe class="iframe" src="https://player.twitch.tv/?channel=melharucos&parent=vinnarde.github.io"
+          <iframe class="iframe" src="https://player.twitch.tv/?channel=melharucos&autoplay=trye&parent=vinnarde.github.io"
             frameborder="0" allowfullscreen="true" scrolling="no" height="100%" width="100%">
           </iframe>
         </div>
