--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
       <div class="twitch-wrapper d-flex flex-column" id="split-twitch">
         <div class="twitch-player-wrapper flex-fill" id="split-twitch-player">
-          <iframe class="iframe" src="https://player.twitch.tv/?channel=melharucos&autoplay=trye&parent=vinnarde.github.io"
+          <iframe class="iframe" src="https://player.twitch.tv/?channel=melharucos&autoplay=true&parent=vinnarde.github.io"
             frameborder="0" allowfullscreen="true" scrolling="no" height="100%" width="100%">
           </iframe>
         </div>
