--- a/index.html
+++ b/index.html
@@ -1,88 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Formula</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://unpkg.com/split.js/dist/split.min.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formula</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
-  <script src="https://unpkg.com/split.js/dist/split.min.js"></script>
-
-  <link rel="stylesheet" href="https://unpkg.com/simplebar@latest/dist/simplebar.css" />
-  <script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
-
-</head>
-
-<body class="bg-dark">
-  <header class="header">
-    <div class="container-fluid header-container d-flex align-centers ">
-      <img src="assets/images/logo.svg" alt="" class="header-logo">
-      <nav class="nav">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a href="https://beta.wroomwroom.net/index.html" class="nav__link">На главную</a>
-          </li>
-          <li class="nav__item">
-            <a href="https://www.donationalerts.com/r/melharucos" class="nav__link">Поддержать стримера</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-  <main>
-    <div class="container-fluid main-container d-flex justify-content-space overflow-hidden px-0">
+  <body class="bg-dark">
+    <div
+      class="container-fluid d-flex justify-content-space vh-100 overflow-hidden px-0"
+    >
       <div class="player-wrapper" id="split-player-formula">
-        <iframe class="iframe" src="https://vk.com/video_ext.php?oid=-211941733&id=456239237&hash=eb53f57bc318423a"
-          frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media; fullscreen; picture-in-picture">
+        <iframe
+          class="iframe"
+          src="https://vk.com/video_ext.php?oid=-211941733&id=456239146&hash=d90acdc774e20351"
+          frameborder="0"
+          allowfullscreen="1"
+          allow="autoplay; encrypted-media; fullscreen; picture-in-picture"
+        >
         </iframe>
       </div>
-      <div class="twitch-wrapper d-flex flex-column" id="split-twitch">
+      <div
+        class="twitch-wrapper d-flex flex-column pt-1 pb-1"
+        id="split-twitch"
+      >
         <div class="twitch-player-wrapper flex-fill" id="split-twitch-player">
-          <iframe class="iframe" src="https://player.twitch.tv/?channel=melharucos&autoplay=true&parent=vinnarde.github.io"
-            frameborder="0" allowfullscreen="true" scrolling="no" height="100%" width="100%">
-          </iframe>
+          <!-- <iframe
+            class="iframe"
+            src="https://player.twitch.tv/?channel=melharucos&parent=vinnarde.github.io"
+            frameborder="0"
+            allowfullscreen="true"
+            scrolling="no"
+            height="100%"
+            width="100%"
+          >
+          </iframe> -->
         </div>
         <div class="twitch-chat-wrapper flex-fill" id="split-twitch-chat">
-          <iframe class="iframe" id="twitch-chat-embed"
-            src="https://www.twitch.tv/embed/melharucos/chat?darkpopout&parent=vinnarde.github.io" height="100%"
-            width="100%">
-          </iframe>
+          <!-- <iframe
+            class="iframe"
+            id="twitch-chat-embed"
+            src="https://www.twitch.tv/embed/melharucos/chat?darkpopout&parent=vinnarde.github.io"
+            height="100%"
+            width="100%"
+          >
+          </iframe> -->
         </div>
       </div>
     </div>
-  </main>
-</body>
 
-<script>
-  const playerSize = JSON.parse(localStorage.getItem('split-sizes-player')) || [80, 20];
-  const twitchSizes = JSON.parse(localStorage.getItem('split-sizes-twitch')) || [20, 80];
+    <!-- Load the Twitch embed script -->
+    <script src="https://embed.twitch.tv/embed/v1.js"></script>
+  </body>
 
-  Split(['#split-player-formula', '#split-twitch'], {
-    sizes: playerSize,
-    minSize: [100, 100],
-    gutterSize: 10,
-    cursor: 'col-resize',
-    direction: 'horizontal',
-    onDragEnd: function (sizes) {
-      localStorage.setItem('split-sizes-player', JSON.stringify(sizes));
-    }
-  });
+  <script>
+    const playerSize = JSON.parse(
+      localStorage.getItem("split-sizes-player")
+    ) || [80, 20];
+    const twitchSizes = JSON.parse(
+      localStorage.getItem("split-sizes-twitch")
+    ) || [20, 80];
 
-  Split(['#split-twitch-player', '#split-twitch-chat'], {
-    sizes: twitchSizes,
-    minSize: [100, 100],
-    gutterSize: 10,
-    cursor: 'row-resize',
-    direction: 'vertical',
-    onDragEnd: function (sizes) {
-      localStorage.setItem('split-sizes-twitch', JSON.stringify(sizes));
-    }
-  });
-</script>
+    Split(["#split-player-formula", "#split-twitch"], {
+      sizes: playerSize,
+      minSize: [100, 100],
+      gutterSize: 10,
+      cursor: "col-resize",
+      direction: "horizontal",
+      onDragEnd: function (sizes) {
+        localStorage.setItem("split-sizes-player", JSON.stringify(sizes));
+      },
+    });
 
+    Split(["#split-twitch-player", "#split-twitch-chat"], {
+      sizes: twitchSizes,
+      minSize: [100, 100],
+      gutterSize: 10,
+      cursor: "row-resize",
+      direction: "vertical",
+      onDragEnd: function (sizes) {
+        localStorage.setItem("split-sizes-twitch", JSON.stringify(sizes));
+      },
+    });
 
+    let embed = new Twitch.Embed("split-twitch-player", {
+      width: 854,
+      height: 480,
+      channel: "monstercat",
+      layout: "video",
+      autoplay: false,
+      // Only needed if this page is going to be embedded on other websites
+      // parent: ["embed.example.com", "othersite.example.com"]
+    });
+
+    embed.addEventListener(Twitch.Embed.VIDEO_READY, () => {
+      const player = embed.getPlayer();
+      player.play();
+    });
+  </script>
 </html>
