--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <main>
     <div class="container-fluid main-container d-flex justify-content-space overflow-hidden px-0">
       <div class="player-wrapper" id="split-player-formula">
-        <iframe class="iframe" src="https://vk.com/video_ext.php?oid=-211941733&id=456239252&hash=f4396cec56858434"
+        <iframe class="iframe" src="https://vk.com/video_ext.php?oid=-203678793&id=456239223&hash=45736599e8383605&hd=1&autoplay=1"
           frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media; fullscreen; picture-in-picture">
         </iframe>
       </div>
