--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
 
   <link rel="stylesheet" href="https://unpkg.com/simplebar@latest/dist/simplebar.css" />
   <script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
-
 </head>
 
 <body class="bg-dark">
-  <header class="header">
+  <!-- <header class="header">
     <div class="container-fluid header-container d-flex align-centers ">
       <img src="assets/images/logo.svg" alt="" class="header-logo">
       <nav class="nav">
@@ -32,11 +31,11 @@
         </ul>
       </nav>
     </div>
-  </header>
+  </header> -->
   <main>
     <div class="container-fluid main-container d-flex justify-content-space overflow-hidden px-0">
       <div class="player-wrapper" id="split-player-formula">
-        <iframe class="iframe" src="https://vk.com/video_ext.php?oid=-203678793&id=456239223&hash=45736599e8383605&hd=1&autoplay=1"
+        <iframe class="iframe" src="https://vk.com/video_ext.php?oid=-157043765&id=456241260&hash=7e88c1cca5adec2b"
           frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media; fullscreen; picture-in-picture">
         </iframe>
       </div>
